[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Actors/TestIcon.png" type="Texture" id=1]
[ext_resource path="res://UI/save/SaveSlot.gd" type="Script" id=2]
[ext_resource path="res://UI/save/GameSaver.gd" type="Script" id=3]

[node name="SaveSlot" type="PanelContainer"]
margin_right = 640.0
margin_bottom = 114.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 633.0
margin_bottom = 107.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 80.0
margin_bottom = 100.0

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/VBoxContainer"]
margin_right = 80.0
margin_bottom = 100.0
texture = ExtResource( 1 )

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 84.0
margin_right = 626.0
margin_bottom = 100.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer2"]
margin_right = 542.0
margin_bottom = 14.0
text = "Save file #0"

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer2"]
margin_top = 18.0
margin_right = 542.0
margin_bottom = 100.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Save" type="Button" parent="HBoxContainer/VBoxContainer2/HBoxContainer"]
margin_right = 269.0
margin_bottom = 82.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Save here."

[node name="Load" type="Button" parent="HBoxContainer/VBoxContainer2/HBoxContainer"]
margin_left = 273.0
margin_right = 542.0
margin_bottom = 82.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Load here."

[node name="GameSaver" type="Node" parent="."]
script = ExtResource( 3 )

[connection signal="pressed" from="HBoxContainer/VBoxContainer2/HBoxContainer/Save" to="." method="_on_Save_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer2/HBoxContainer/Load" to="." method="_on_Load_pressed"]
